# HerenciaPOO

./: .gitignore  CMakeLists.txt  CMakePresets.json  readme.md
src/: CMakeLists.txt  Main.cpp
src/Model/: ClassA.h  ClassB.cpp  ClassB.h  ClassC.h
src/View/: View.cpp  View.h
testing/: CMakeLists.txt  ViewTest.cpp
